--- a/src/Components/Cart/_SideCart.scss
+++ b/src/Components/Cart/_SideCart.scss
@@ -5,55 +5,54 @@
   align-items: center;
   justify-self: stretch;
   right: 0;
-  top: 0;
-  width: 497px;
-  height: 586px;
   padding: 0 0 44px 0;
-
+  top: 64px;
+  width: 100%;
+  height: 218px;
+  @include desktop{
+    top: 0;
+    width: 497px;
+    height: 586px;
+  }
   img {
     position: absolute;
-    left: 224px;
-    top: 243px;
-    width: 49px;
+    left: 167px;
+    top: 63px;
+    width: 45px;
     opacity: 0.5;
+    @include desktop{
+      left: 224px;
+      top: 243px;
+      width: 49px;
+    }
   }
-
   p {
     position: absolute;
-    left: 188px;
-    bottom: 224px;
+    left: 117px;
+    bottom: 45px;
+    width: 145px;
+
     font-weight: 200;
     text-align: center;
     font-size: 16px;
     letter-spacing: 1.97px;
     text-transform: uppercase;
-    width: 121px;
     opacity: 0.5;
+    @include desktop{
+      left: 188px;
+      bottom: 224px;
+      width: 121px;
+    }
 
   }
 
-  @include mobile {
-    top: 64px;
-    width: 100%;
-    height: 218px;
-    img {
-      position: absolute;
-      left: 167px;
-      top: 63px;
-      width: 45px;
-      opacity: 0.5;
-    }
-    p {
-      left: 117px;
-      bottom: 45px;
-      width: 145px;
-      opacity: 0.5;
-
-    }
     .secondary_button {
       display: none;
+      @include desktop{
+        display: block;
+      }
     }
-  }
+
 }
 
 .show_cart {
