--- a/src/Components/Chef/_Chef.scss
+++ b/src/Components/Chef/_Chef.scss
@@ -1,86 +1,95 @@
 .chef {
   display: flex;
   background-color: black;
-  width: 478px;
-  height: 372px;
+  width: 335px;
+  height: 262px;
   flex-direction: column-reverse;
   align-items: center;
+  @include desktop {
+    width: 478px;
+    height: 372px;
+  }
   img{
     width: 380px;
     height: 357px;
   }
-  @include mobile {
-    width: 335px;
-    height: 262px;
-  }
+
 
   .chef_name {
     background-color: rgba(255, 255, 255, 0.8);
-    height: 78px;
+    height: 47px;
     position: absolute;
     display: flex;
-    font-size: 40px;
+    font-size: 18px;
     font-weight: 400;
     letter-spacing: 2.67px;
-    width: inherit;
+    width: 100%;
     justify-content: center;
     align-items: center;
     text-transform: capitalize;
-    @include mobile {
-      height: 47px;
-      font-size: 18px;
-      width: 100%;
+    @include desktop {
+      font-size: 40px;
+      height: 78px;
+      width: inherit;
     }
   }
 }
 
 .chef_of_the_week_section {
-  margin-top: -50px;
+  margin: 0;
   justify-content: space-between;
   align-items: center;
-  width: 82%;
-  margin-left: 8.85%;
+  width: 100%;
+  height: auto;
+  padding: 0;
 
-  @include mobile{
-    height: auto;
-    width: 100%;
-    margin: 0;
-    padding: 0;
+  @include desktop{
+    width: 82%;
+    margin-left: 8.85%;
+    margin-top: -50px;
+
+
   }
 
 }
 .chef_of_the_week_info {
+  gap: 0;
   margin-top: 15px;
+  margin-left: 20px;
+  margin-right: 20px;
+  flex-direction: column;
   justify-content: space-between;
+  @include desktop{
+    flex-direction: row;
+    gap:63.5px;
+    margin-left: 0;
+    margin-right: 0;
+  }
   .body_text{
-    width: 55%;
+    margin-top: 24px;
+    width: 100%;
+    @include desktop{
+    margin-top: 0;
+    }
   }
   .chef_of_the_week_image{
-    background-color: black;
-    width: 478px;
-    height: 372px;
-  }
+    display: flex;
+    justify-content: center;
+    background-color: transparent;
+    height: auto;
+    width: 100%;
+    @include desktop{
+      width: 478px;
+      height: 372px;
 
-  @include mobile{
-    margin-left: 20px;
-    margin-right: 20px;
-    flex-direction: column;
-    .body_text{
-      margin-top: 24px;
-      width: 100%;
     }
-
-    .chef_of_the_week_image{
-      display: flex;
-      justify-content: center;
-      background-color: transparent;
+    img{
       width: 100%;
-      height: auto;
-
-      img{
-        width: 100%;
-        height: 270px;
-        object-fit: cover;
+      height: 270px;
+      object-fit: cover;
+      @include desktop{
+        width: auto;
+        height: auto;
       }
     }
   }
