--- a/src/Components/Header/_Header.scss
+++ b/src/Components/Header/_Header.scss
@@ -1,7 +1,7 @@
 .hero {
   animation-name: headerIn;
   animation-duration: 1s;
-  margin-top: 64px;
+  margin-top: 46px;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -10,6 +10,8 @@
   background-size: cover;
   @include desktop {
     height: 696px;
+    margin-top: 64px;
+
   }
 }
 
@@ -19,11 +21,13 @@
   //justify-content: space-evenly;
   align-items: center;
   display: flex;
-  width: 71.6%;
+  //width: 71.6%;
+  width: auto;
+  padding: 0 10px;
+  //margin: 0 5.3%;
 
   height: 144px;
-  padding-top: 0;
-  padding-bottom: 0;
+
   background: rgba(255, 255, 255, 0.88);
   justify-content: space-around;
   @include desktop {
@@ -37,7 +41,6 @@
   h1 {
     text-align: center;
     width: 320px;
-    font-size: 24px;
     margin-top: -3px;
     margin-bottom: 30px;
     @include desktop{
