--- a/src/Components/Restaurants/_Restaurant.scss
+++ b/src/Components/Restaurants/_Restaurant.scss
@@ -1,23 +1,35 @@
 .restaurant_chef {
   box-sizing: border-box;
-  width: 245px;
-  height: 233px;
-  margin-left: 20px;
-  margin-right: 4px;
+  //width: 245px;
+  width: auto;
+  //height: 233px;
+  height: auto;
+  //margin-left: 20px;
+  //margin-right: 4px;
+  padding: 0 12px;
 
   @include desktop {
-    width: 379px;
-    height: 404px;
+    //width: 379px;
+    width: 100%;
+    //height: 404px;
+    height: auto;
     //todo: check the margin here
     margin: 0;
+    padding: 0 12px;
   }
 
   img {
-    width: 245px;
-    height: 152px;
+    //width: 245px;
+    width: inherit;
+    //height: 152px;
+    height: inherit;
     @include desktop {
-      width: 379px;
-      height: 236px;
+      //width: 379px;
+      width: inherit;
+      height: inherit;
+      //height: 236px;
+      //height: 58.5%;
+
     }
   }
 
@@ -116,7 +128,7 @@
   height: 233px;
   margin-bottom: 0;
   @include desktop {
-    width: 231px;
+    //width: 231px;
     height: 357px;
     margin-bottom: 90px;
   }
@@ -151,14 +163,14 @@
 
   .text_restaurant_primary {
     text-align: center;
-    width: 100%;
-    font-size: 30px;
+    //width: 100%;
+    font-size: 18px;
     font-weight: 400;
     letter-spacing: 2.67px;
     //margin: 0;
     padding: 3.5px;
     @include desktop {
-      font-size: 18px;
+      font-size: 30px;
       //padding-left: 16px;
     }
   }
