--- a/src/Styles/_GlobalStyles.scss
+++ b/src/Styles/_GlobalStyles.scss
@@ -4,13 +4,21 @@ $secondary-color1: #F9F4EA;
 $secondary-color2: #E19D1A;
 $secondary-color3: #FAFAFA;
 
-@mixin mobile{
-  @media screen and (max-width: 600px) {@content}
-};
+@mixin mobile {
+  @media screen and (max-width: 600px) {
+    @content
+  }
+}
 
-@mixin desktop{
-  @media screen and (min-width: 600px) {@content}
-};
+;
+
+@mixin desktop {
+  @media screen and (min-width: 600px) {
+    @content
+  }
+}
+
+;
 
 .header {
 
@@ -18,7 +26,7 @@ $secondary-color3: #FAFAFA;
     font-weight: 200;
     font-size: 24px;
     letter-spacing: 1.97px;
-    @include desktop{
+    @include desktop {
       font-size: 32px;
     }
   }
@@ -28,28 +36,41 @@ $secondary-color3: #FAFAFA;
     font-size: 16px;
     letter-spacing: 1.25px;
     text-transform: uppercase;
-    @include desktop{
+    @include desktop {
       font-size: 30px;
     }
   }
 
-  h3{
+  h3 {
     font-size: 18px;
     font-weight: 400;
     letter-spacing: 2.67px;
-    @include desktop{
+    @include desktop {
       font-size: 40px;
     }
   }
 }
 
-.body_text{
+.body_text {
   font-size: 16px;
   font-weight: 200;
   letter-spacing: 1.97px;
-  @include desktop{
+  @include desktop {
     font-size: 24px;
   }
+}
+
+.helper_section_width_100 {
+  width: 100%;
+}
+
+.helper_header_align_center{
+  text-align: center;
+}
+
+.helper_div_sides{
+  width: 83.3%;
+  margin-left: 8.9%;
 }
 
 
