--- a/src/Components/UI/Button/_button.scss
+++ b/src/Components/UI/Button/_button.scss
@@ -1,9 +1,9 @@
 $button-hover-background: #515151;
 
 @mixin button($background-color, $font-color, $show-image) {
-  font-weight: 400;
+  font-weight: $bold-weight;
   font-size: 18px;
-  letter-spacing: 2.67px;
+  letter-spacing: $letter-spacing-5;
   color: $font-color;
   text-transform: uppercase;
   display: flex;
@@ -73,8 +73,6 @@ $button-hover-background: #515151;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
-  //width: 226px;
-  //height: 35px;
   background-color: transparent;
   gap: 12px;
   padding: 0;
@@ -89,7 +87,7 @@ $button-hover-background: #515151;
     order: 0;
     flex-grow: 0;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: $bold-weight;
     letter-spacing: 2px;
     text-transform: capitalize;
     @include desktop{
